# gobble

./: .gitignore  Cargo.toml  readme.md
examples/: json.rs  json_mac.rs  sums.rs
src/: basic.rs  chars.rs  combi.rs  common.rs  err.rs  iter.rs  lib.rs  macros.rs  main.rs  ptrait.rs  pull.rs  reader.rs  repeater.rs  skip.rs  strings.rs  traits.rs  tuple.rs
