[package]
name = "gobble"
version = "0.1.0"
authors = ["storyfeet <thebeaky@psmail.net>"]
edition = "2018"

[[bin]]
path="src/main.rs"
name="gobble_nums"

[lib]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.7"
failure_derive = "0.1.7"
