[package]
name = "gobble"
version = "0.1.2"
authors = ["storyfeet <thebeaky@psmail.net>"]
edition = "2018"
license = "MIT"
keywords = ["parser","combinator","simple","iterator"]
description = "A Combinator based parser for strings that is just code. That is: no macros and you don't have to think too much about generics"
readme = "readme.md"
repository = "https://github.com/storyfeet/gobble"

[[bin]]
path="src/main.rs"
name="gobble_nums"

[lib]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.7"
failure_derive = "0.1.7"
