[package]
name = "gobble"
version = "0.6.2"
authors = ["storyfeet <thebeaky@psmail.net>"]
edition = "2018"
license = "MIT"
keywords = ["parser","combinator","simple","iterator"]
description = "A Combinator based parser for strings that gets out of the way, and leaves your code looking like a grammer"
readme = "readme.md"
repository = "https://github.com/storyfeet/gobble"


[lib]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.17"
anyhow = "1.0.31"
